crates/tests/libs/bindgen/data/error/win32_multiple_required_interfaces/input.rdl

#[win32]
mod Test {
    interface IFoo: IBar + IBaz {}
}
        